[project]
name = "sphinx-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "furo>=2025.12.19",
    "myst-parser>=5.0.0",
    "pydata-sphinx-theme>=0.16.1",
    "shibuya>=2026.1.9",
    "sphinx>=9.1.0",
    "sphinxcontrib-bibtex>=2.6.5",
]
